--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 style="color:bisque">Hello from Ajay!</h1>
+    <p>abhi </p>
     <h1>Hello from Ajay!</h1>
 </body>
 </html>
