--- a/index.html
+++ b/index.html
@@ -5,9 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS level 1</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        button{
+            background-color: blue;
+        }
+    </style>
 </head>
 <body>
-    <p>abhi </p>
-    <h1>Hello from Ajay!</h1>
+    <div id="box">
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod modi reiciendis asperiores temporibus veniam tenetur nisi doloremque quam, commodi tempora facere laudantium labore veritatis maiores possimus, quaerat tempore, autem eligendi?
+    </div>
+    <h1 class="heading"> hello my check</h1>
+    <h1 class="heading"> hello my check</h1>
+    <h3 class="heading"> hello my check</h3>
+    <button style="background-color: red;">button3</button>
 </body>
 </html>
